# pri-top-papers

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: the_algorithm.md
src/pri/: find_top_by_18m_citations_llm_filtered.py  openalex_client.py  output_paths.py  pri_llm_fallbacks.py  pri_llm_provider.py
src/utils/: cache_utils.py  llm_processor.py
